# auth-framework

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CRITICAL_SECURITY_AUDIT_REPORT.md  Cargo.toml  Cargo.toml.backup  DEAD_CODE_SECURITY_AUDIT.md  DEPENDENCY_TRADE_OFFS_ANALYSIS.md  DEVELOPMENT_STATUS.md  Dockerfile  Dockerfile.optimized  ENHANCED_DEVICE_FLOW_ASSESSMENT.md  ERGONOMICS_ANALYSIS_COMPLETE.md  LICENSE-APACHE  OAUTH_DEVICE_FLOWS_INTEGRATION.md  OAUTH_DEVICE_FLOWS_INTEGRATION_SUMMARY.md  PRODUCTION_READINESS_AUDIT.md  PRODUCTION_READINESS_FINAL_AUDIT.md  PRODUCTION_RELEASE_SUMMARY.md  PROJECT_ORGANIZATION_COMPLETE.md  README.md  RELEASE_NOTES.md  RELEASE_READINESS.md  RUSTSEC-2023-0071_COMPREHENSIVE_ANALYSIS.md  SDK_REPOSITORY_SPLIT_GUIDE.md  SECURITY.md  SECURITY_ADVISORY.md  SECURITY_AUDIT.md  SECURITY_GUIDE.md  deny.toml  docker-compose.production.yml  docker-compose.yml  lcov.info  private.pem  private_pkcs8.pem  public.pem  public_spki.pem  rustc-ice-2025-09-27T12_38_23-11644.txt  rustc-ice-2025-09-27T16_52_46-34596.txt  (+11 more)
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml
C:\Users\cires\.cache\auth-framework\target/: .rustc_info.json
benches/: auth_performance.rs  storage_simple.rs
config/: EXAMPLES.md  INTEGRATION_GUIDE.md  auth-framework.toml  session.toml  threat-intel.toml
config/methods/: api_key.toml  jwt.toml  mfa.toml  oauth2.toml
docs/: TOKEN_EXCHANGE_SELECTION_GUIDE.md  api-reference.md  oauth21-security.md  oauth2_2.1_progress.md  storage-backends.md  web-frameworks.md
docs/api/: README.md  complete-reference.md  integration-patterns.md  migration-upgrade.md  openapi.yaml  performance-optimization.md
docs/architecture/: ADR-001-modular-architecture.md  ADR-002-storage-abstraction.md  ADR-003-async-first-design.md  ADR-004-security-by-default.md  ADR-005-jwt-token-management.md  ADR-006-error-handling-strategy.md  ADR-007-web-framework-integration.md  ADR-008-testing-architecture.md  ADR-009-configuration-management.md  ADR-010-monitoring-observability.md  README.md
docs/deployment/: production-guide.md
docs/guides/: administrator-setup.md  custom-storage-implementation.md  developer-integration.md  security-configuration.md  third-party-storage-usage.md  troubleshooting.md
docs/quality/: code-quality-metrics.md  documentation-review.md  performance-benchmarks.md  security-audit-final.md
examples/: api_keys.rs  axum_integration.rs  basic.rs  basic_usage_corrected.rs  benchmarks.rs  cli_auth_tool.rs  complete_rest_api_server.rs  debug_server.rs  device_flow.rs  enhanced_device_flow.rs  enhanced_ergonomics.rs  mfa.rs  middleware.rs  oauth.rs  oauth2_authorization_server.rs  performance_demo.rs  permissions.rs  production_deployments.rs  security_audit.rs  simple_oauth2_server.rs  simple_performance_demo.rs  simple_working_deployment.rs  smskit_integration.rs  working_demo.rs
migration/: test_plan_status.json
monitoring/: prometheus.yml
nginx/: nginx.conf
sdks/javascript/: README.md  jest.config.js  jest.setup.ts  package-build.json  package-test.json  package.json  rollup.config.js  tsconfig.json
sdks/python/: ENHANCEMENT_SUMMARY.md  INTEGRATION_TESTING_ANALYSIS.md  README.md  pyproject.toml  run_tests.py
sdks/python/examples/: __init__.py  enhanced_features_demo.py  example.py  fastapi_integration_demo.py
sdks/python/src/authframework/: __init__.py  _admin.py  _auth.py  _base.py  _health.py  _mfa.py  _oauth.py  _tokens.py  _user.py  client.py  client_new.py  client_old.py  exceptions.py  models.py
sdks/python/src/authframework/integrations/: __init__.py  fastapi.py  flask.py
sdks/python/src/authframework/models/: __init__.py  admin_models.py  health_models.py  mfa_models.py  oauth_models.py  rate_limit_models.py  token_models.py  user_models.py
sdks/python/tests/: README.md  conftest.py  integration_conftest.py  test_architecture_fixed.py
sdks/python/tests/integration/: conftest.py  test_server_integration.py  test_simple_integration.py
src/: audit.rs  auth.rs  authorization.rs  builders.rs  config.rs  credentials.rs  distributed_rate_limiting.rs  errors.rs  lib.rs  methods.rs  mfa.rs  oauth2_enhanced_storage.rs  oauth2_server.rs  permissions.rs  prelude.rs  providers.rs  saml_assertions.rs  secure_jwt.rs  secure_mfa.rs  secure_session.rs  secure_session_config.rs  secure_utils.rs  session.rs  storage.rs  test_infrastructure.rs  testing.rs  threat_intelligence.rs  tokens.rs  user_context.rs  utils.rs  ws_security.rs  ws_trust.rs
src/admin/: cli.rs  mod.rs  tui.rs  web.rs
src/analytics/: compliance.rs  dashboard.rs  metrics.rs  mod.rs  reports.rs
src/api/: admin.rs  auth.rs  error_codes.rs  health.rs  metrics.rs  mfa.rs  middleware.rs  mod.rs  oauth.rs  openapi.rs  rbac_endpoints.rs  responses.rs  server.rs  users.rs  validation.rs  versioning.rs
src/architecture/: mod.rs
src/auth_modular/: mod.rs  (+2 more)
templates/: base.html  config.html  dashboard.html  login.html  logs.html  security.html  servers.html  simple_config.html  simple_dashboard.html  simple_login.html  simple_logs.html  simple_security.html  simple_servers.html  simple_users.html  users.html
tests/: code_quality_audit.rs  comprehensive_api_tests.rs  critical_authentication_security.rs  critical_security_detection.rs  custom_storage_builder.rs  edge_case_comprehensive_tests.rs  edge_cases_comprehensive.rs  enterprise_auth_integration.rs  error_path_comprehensive.rs  final_comprehensive_security_audit.rs  integration_tests.rs  profile_utils_tests.rs  rfc_compliance_final.rs  rfc_compliance_tests.rs  security_comprehensive.rs  security_validation_critical.rs  security_validation_test.rs  security_vulnerability_detection.rs  security_vulnerability_detection.rs.bak  server_tests.rs.disabled  simple_comprehensive_tests.rs  simple_enterprise_test.rs  simple_integration_test.rs  simplified_comprehensive_tests.rs  test_coverage_gaps.rs  test_helpers.rs  token_edge_tests.rs  token_exchange_integration.rs  vulnerability_testing_analysis.rs  working_comprehensive_tests.rs  working_integration_tests.rs
(+151 files in other folders)
